<resources>
    <string name="app_name">STUDENT </string>
    <string name="button">Button</string>
    <string name="username">User Name</string>
    <string name="todo">UOJ Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lecture">Lecturer</string>
    <string name="student">Student</string>
    <string name="course">Course</string>
    <string name="right">Right</string>
    <string name="songs">Songs</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_admin_panel1">ADMIN PANEL</string>
    <string name="registration_no">Registration No</string>
    <string name="name">Name</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_attendance">ATTENDANCE</string>
    <string name="title_activity_fingerprint_view">FingerprintViewActivity</string>
    <string name="title_activity_student">STUDENT</string>
    <string name="title_activity_lecture">LECTURER</string>
    <string name="title_activity_course">COURSE</string>
    <string name="title_add_updt_student">STUDENT ADD/UPDATE</string>
    <string name="title_delete_student">STUDENT DELETE</string>
    <string name="title_view_student">VIEW STUDENT</string>
    <string name="title_add_updt_lecture">ADD/UPDATE LECTURER</string>
    <string name="title_view_lecture">VIEW LECTURER</string>
    <string name="title_delete_lecture">DELETE LECTURER</string>

</resources>
