<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMain">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:textAlignment="center"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/uoj_logo" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_Username"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="15dp"
            app:fontFamily="@font/belgrano"
            android:drawableStart="@drawable/ic_action_user" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_password"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_passw"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:fontFamily="@font/belgrano" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#425fe1"
        android:layout_marginTop="30dp"
        android:text="LOGIN"
        android:textColor="#ffffff"
        app:fontFamily="@font/belgrano"/>

    </LinearLayout>

</RelativeLayout>